# bruno-tama

./: .gitignore  README.md  ROADMAP.md  flake.nix  pyproject.toml
bruno/: __init__.py  __main__.py  coord.py  creature.py  feed.py  food.py  llm.py  mouse.py  overlay.py  particles.py  render.py  say.py  shellhook.py  sprites.py  state.py  tmux.py
bruno/rc/: bruno.bash  bruno.zsh
