[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bruno-tama"
version = "0.1.0"
description = "a dot-blob tamagotchi that overlays on your live shell"
readme = { text = """\
bruno is a small ASCII creature that lives on top of your shell. He walks
through whatever empty space your terminal has, squishes when blocked,
teleports to a fresh clear spot, and hides when the pane is full. Wraps
$SHELL in a PTY so he coexists with whatever you're typing.

  pipx install bruno-tama
  bruno
""", content-type = "text/plain" }
requires-python = ">=3.10"
authors = [{ name = "mvrozanti", email = "mvrozanti@gmail.com" }]
license = { text = "MIT" }
keywords = ["tamagotchi", "tmux", "ascii", "terminal", "cli", "gag"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment",
  "Topic :: Terminals",
]
dependencies = [
  "pyte>=0.8",
]

[project.urls]
Homepage = "https://github.com/mvrozanti/bruno-tama"
Repository = "https://github.com/mvrozanti/bruno-tama"
Issues = "https://github.com/mvrozanti/bruno-tama/issues"

[project.scripts]
bruno = "bruno.__main__:main"

[tool.setuptools]
packages = ["bruno"]
